--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
            <div class="searchbar">
             <input type="text"class="searchbar">
         </div>
+        <div class="navbar">
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">About</a></li>
+        </ul>
+        </div>
         </body>
     </head>
 </html>
